kyy-k8s-dev/app/backend/cloud-call/cloud-call-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8s-cloud-call
  name: k8s-cloud-call
spec:
  replicas: 1
  selector:
   matchLabels:
     app: k8s-cloud-call
  template:
    metadata:
      labels:
        app: k8s-cloud-call
    spec:
      containers:
        - name: k8s-cloud-call
          image: registry.cn-beijing.aliyuncs.com/kaoyaya-micro/cloud-call
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
