kyy-k8s-dev/app/backend/cloud-call/cloud-call-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-cloud-call
  name: k8s-cloud-call
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: k8s-cloud-call
